# crately

./: .gitignore  Cargo.toml  README.md
docs/: PIPELINE_ARCHITECTURE.md  PIPELINE_EVENT_FLOW.md
examples/: query_db.rs
src/: cli.rs  colors.rs  config.rs  console.rs  crate_downloader.rs  crate_specifier.rs  keyboard_handler.rs  lib.rs  logging.rs  main.rs  request.rs  response.rs  retry_policy.rs  runtime.rs  server_actor.rs
src/actors/: config.rs  console.rs  crate_coordinator_actor.rs  crate_downloader.rs  database.rs  database.rs.backup  downloader_actor.rs  file_reader_actor.rs  keyboard_handler.rs  mod.rs  processor_actor.rs  retry_coordinator.rs  server_actor.rs  vectorizer_actor.rs
src/commands/: batch.rs  cache.rs  doctor.rs  init.rs  mod.rs  serve.rs  warm.rs
src/errors/: download_error.rs  extraction_error.rs  mod.rs  pipeline_error.rs  processing_error.rs  storage_error.rs  vectorization_error.rs
src/messages/: build_chunks_query_response.rs  build_completed.rs  build_created.rs  build_failed.rs  build_query_response.rs  check_processing_timeouts.rs  chunk_deduplicated.rs  chunk_hash_computed.rs  chunk_persistence_progress.rs  chunks_persistence_complete.rs  config_reload_failed.rs  crate_download_failed.rs  crate_downloaded.rs  crate_list_response.rs  crate_persisted.rs  crate_processing_complete.rs  crate_processing_failed.rs  crate_query_response.rs  crate_received.rs  database_error.rs  database_ready.rs  database_warning.rs  doc_chunk_persisted.rs  doc_chunks_query_response.rs  documentation_chunked.rs  documentation_extracted.rs  documentation_extraction_failed.rs  documentation_vectorized.rs  embedding_failed.rs  embedding_generated.rs  embedding_persisted.rs  embedding_persistence_progress.rs  embeddings_persistence_complete.rs  init.rs  key_pressed.rs  keyboard_handler_started.rs  list_crates.rs  mod.rs  persist_code_sample.rs  persist_crate.rs  (+24 more)
src/types/: chunk_metadata.rs  code_sample_metadata.rs  hashes.rs  ids.rs  mod.rs  search_result.rs
tests/: database_integration.rs  graph_deduplication_integration.rs  pipeline_integration.rs
