[package]
name = "crately"
version = "0.1.0"
edition = "2024"

[dependencies]
acton-reactive = "5.0.0"
axum = { version = "0.8.6", features = ["tokio", "tracing", "tower-log", "macros", "json", "http2"] }
cargo-util-schemas = "0.7"
mti = { version = "1.0.0", features = ["serde", "instrument"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.3.10", features = ["rustls", "protocol-ws"] }
tokio = { version = "1.41", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
