[package]
name = "crately"
version = "0.1.0"
edition = "2024"
authors = ["Govcraft <roland@govcraft.ai>"]
description = "Crate documentation processing and semantic search service"
readme = "CLAUDE.md"
homepage = "https://github.com/govcraft/crately"
repository = "https://github.com/govcraft/crately"
license = "AGPL-3.0-or-later"
keywords = ["documentation", "search", "crates", "vectorization", "semantic-search"]
categories = ["development-tools", "web-programming::http-server"]
rust-version = "1.85"

[lib]
name = "crately"
path = "src/lib.rs"

[features]
rocksdb = ["surrealdb/kv-rocksdb"]

[dependencies]
acton-reactive = "5.0.0"
axum = { version = "0.8.6", features = ["tokio", "tracing", "tower-log", "macros", "json", "http2"] }
cargo-util-schemas = "0.7"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["default", "event-stream", "serde"] }
dashmap = "6.1"
futures-util = "0.3"
mti = { version = "1.0.0", features = ["serde", "instrument"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surrealdb = { version = "2.3.10", features = ["rustls", "protocol-ws", "kv-mem"], default-features = false }
toml = "0.8"
tokio = { version = "1.41", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdg = { version = "3.0.0", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
is-terminal = "0.4"
rand = "0.9.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
